Fixed scroll bar behavior, made close button more transparent, fixed tooltip z-index, fixed value window min size

--- a/openmdao/visualization/n2_viewer/style/partition_tree.css
+++ b/openmdao/visualization/n2_viewer/style/partition_tree.css
@@ -190,7 +190,7 @@ body {
 }
 
 .tool-tip {
-    z-index: 10;
+    z-index: 10000;
     font-size: 11px;
     padding: 5;
     background-color: #fff;
